syntax = "proto3";

package grpc_db;

service DB {rpc Tx(TxRequest) returns (stream TxResult);
  rpc Rx(RxRequest) returns (stream RxResult);}

message TxRequest {string query = 1;}

message RxRequest{string query = 1;}

message Column {string name = 1;
  uint32 value = 2;}

message Int128 {uint64 high = 1;
  uint64 low = 2;}

message UInt128 {uint64 high = 1;
  uint64 low = 2;}

message Value {oneof kind {

  bool bool_value = 1;

  int32 int1_value = 2;
  int32 int2_value = 3;
  int32 int4_value = 4;
  int64 int8_value = 5;
  Int128 int16_value = 6;

  uint32 uint1_value = 7;
  uint32 uint2_value = 8;
  uint32 uint4_value = 9;
  uint64 uint8_value = 10;
  UInt128 uint16_value = 11;

  string string_value = 12;

  float float32_value = 13;
  double float64_value = 14;

  bool undefined_value = 15;

}}

message Row {repeated Value values = 1;}


message CreateSchema { uint64 id = 1; string schema = 2; bool created = 3;}

message CreateSeries {string schema = 1;
  string series = 2;}

message CreateTable {
  uint64  id = 1;
  string schema = 2;
  string table = 3;
  bool created = 4;
}

message InsertIntoSeries {string schema = 1;
  string series = 2;
  uint32 inserted = 3;}

message InsertIntoTable {string schema = 1;
  string table = 2;
  uint32 inserted = 3;}

message QueryResult {repeated Column columns = 1;
  repeated Row rows = 2;}


message DescribeQuery {repeated Column columns = 1;}


message TxResult {oneof result {CreateSchema create_schema = 1;
  CreateTable create_table = 2;
  InsertIntoSeries insert_into_series = 3;
  InsertIntoTable insert_into_table = 4;
  QueryResult query = 5;
  DescribeQuery describe_query = 6;
  Diagnostic error = 7;}}

message RxResult {oneof result {QueryResult query = 4;
  Diagnostic error = 5;}}



message Span {uint32 offset = 1;
  uint32 line = 2;
  string fragment = 3;}

message DiagnosticColumn {string name = 1;
  ValueKind value = 2;}

message Diagnostic {string code = 1;
  string message = 2;

  Span span = 3;
  string label = 4;
  string help = 5;

  repeated string notes = 6;
  DiagnosticColumn column = 7;}

enum ValueKind {UNDEFINED = 0;
  BOOL = 1;
  FLOAT4 = 2;
  FLOAT8 = 3;
  INT1 = 4;
  INT2 = 5;
  INT4 = 6;
  INT8 = 7;
  INT16 = 8;
  STRING = 9;
  UINT1 = 10;
  UINT2 = 11;
  UINT4 = 12;
  UINT8 = 13;
  UINT16 = 14;}